--- a/3-线.html
+++ b/3-线.html
@@ -41,7 +41,7 @@
     // eAngle 结束角度 以弧度计-起始角度同
     // xxx 顺时针还是逆时针 false-顺时针 true-逆时针
     ctx.arc(300,300,100,0,Math.PI*1.5,false)
-    ctx.lineTo(300,300) // 1
+    ctx.lineTo(300,300) // 1 画笔在此位置后往下继续画，从而不会和初始点连接起来
     ctx.lineTo(400,300) // 2 若无1、2步的话将会从初始到结束连接起来，并不是缺角的样式
     ctx.fillStyle = 'red'
     ctx.fill()
