--- a/6-钟表.html
+++ b/6-钟表.html
@@ -42,8 +42,16 @@
   for(var i=0;i<60;i++) {
     if(i%5 == 0) {
       ctx.beginPath()
-      ctx.moveTo(Math.cos(Math.PI/180*i*6)*200-50*Math.cos(Math.PI/180*i*6),Math.sin(Math.PI/180*i*6)*200+50*Math.sin(Math.PI/180*i*6))
-      ctx.lineTo(Math.cos(Math.PI/180*i*6)*200, Math.sin(Math.PI/180*i*6)*200)
+      ctx.moveTo(Math.cos(Math.PI/180*i*6)*200,Math.sin(Math.PI/180*i*6)*200)
+      ctx.lineTo(Math.cos(Math.PI/180*i*6)*170, Math.sin(Math.PI/180*i*6)*170)
+      ctx.strokeStyle = 'red'
+      ctx.stroke()
+      ctx.closePath()
+    }else{
+      ctx.beginPath()
+      ctx.moveTo(Math.cos(Math.PI/180*i*6)*200,Math.sin(Math.PI/180*i*6)*200)
+      ctx.lineTo(Math.cos(Math.PI/180*i*6)*185, Math.sin(Math.PI/180*i*6)*185)
+      ctx.strokeStyle = 'black'
       ctx.stroke()
       ctx.closePath()
     }
@@ -55,16 +63,25 @@
   // ctx.stroke()
   // ctx.closePath()
 
-  // console.log(88888,Math.cos(Math.PI/180*45)*200-50, Math.sin(Math.PI/180*315)*200-50);
   // ctx.beginPath()
   // ctx.moveTo(Math.cos(Math.PI/180*45)*200,Math.sin(Math.PI/180*315)*200)
   // ctx.lineTo(Math.cos(Math.PI/180*45)*200-50*Math.cos(Math.PI/180*45), Math.sin(Math.PI/180*315)*200+50*Math.sin(Math.PI/180*45))
+  // ctx.strokeStyle = 'red'
   // ctx.stroke()
   // ctx.closePath()
 
   // ctx.beginPath()
   // ctx.moveTo(200,0)
   // ctx.lineTo(150, 0)
+  // ctx.strokeStyle = 'blue'
+  // ctx.stroke()
+  // ctx.closePath()
+
+  // ctx.beginPath()
+  // ctx.moveTo(Math.cos(Math.PI/180*30)*200,Math.sin(Math.PI/180*30)*200)
+  // // ctx.lineTo(0,0)
+  // ctx.lineTo(Math.cos(Math.PI/180*30)*150, Math.sin(Math.PI/180*30)*150)
+  // ctx.strokeStyle = 'yellow'
   // ctx.stroke()
   // ctx.closePath()
 
